; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/arm64/extr_gtdt.c_is_non_secure_watchdog.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/arm64/extr_gtdt.c_is_non_secure_watchdog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_gtdt_header = type { i64 }
%struct.acpi_gtdt_watchdog = type { i32 }

@ACPI_GTDT_TYPE_WATCHDOG = common dso_local global i64 0, align 8
@ACPI_GTDT_WATCHDOG_SECURE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @is_non_secure_watchdog to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_non_secure_watchdog(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.acpi_gtdt_header*, align 8
  %5 = alloca %struct.acpi_gtdt_watchdog*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.acpi_gtdt_header*
  store %struct.acpi_gtdt_header* %7, %struct.acpi_gtdt_header** %4, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = bitcast i8* %8 to %struct.acpi_gtdt_watchdog*
  store %struct.acpi_gtdt_watchdog* %9, %struct.acpi_gtdt_watchdog** %5, align 8
  %10 = load %struct.acpi_gtdt_header*, %struct.acpi_gtdt_header** %4, align 8
  %11 = getelementptr inbounds %struct.acpi_gtdt_header, %struct.acpi_gtdt_header* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @ACPI_GTDT_TYPE_WATCHDOG, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %25

16:                                               ; preds = %1
  %17 = load %struct.acpi_gtdt_watchdog*, %struct.acpi_gtdt_watchdog** %5, align 8
  %18 = getelementptr inbounds %struct.acpi_gtdt_watchdog, %struct.acpi_gtdt_watchdog* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @ACPI_GTDT_WATCHDOG_SECURE, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  %23 = xor i1 %22, true
  %24 = zext i1 %23 to i32
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %16, %15
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
